Response to Review

--- a/fig_plis/article_SI.tex
+++ b/fig_plis/article_SI.tex
@@ -77,28 +77,28 @@ To form a biogel we start from an aqueous dispersion of caseins and glucono-$\de
 
 The dynamics of the pattern formation are followed by light transmission microscopy and confocal microscopy, see Materials and Methods. As shown in Figure~\ref{fig:dynamics}b and Supplementary Video~\ref{vid:transmitted}, we observe the spontaneous formation of a first pattern that appears with a characteristic wavelength $\lambda\ll L$. The 2D shape and size of this primary pattern are set as soon as the pattern forms and do not evolve in time. However inside the primary pattern a secondary pattern emerges, inside which a ternary forms. At each step of this Russian dolls-like cascade, the wavelength is divided by two, as shown in Supplementary Figure~\ref{fig:generations}.
 
-3D confocal microscopy, as shown in Figure~\ref{fig:dynamics}c and Supplementary Video~\ref{vid:reconstructed}, reveals that those patterns actually correspond to wrinkles of the biogel film. Figure~\ref{fig:sideview}a shows successive side views of the same confocal measurements as in  Figure~\ref{fig:dynamics}c, see also Supplementary Videos~\ref{vid:cutDarcy} and \ref{vid:cutPoiseuille}. Initially the dispersion is homogeneous and fills the entire slit. The black margins in Figure~\ref{fig:sideview}a correspond to the glass walls. Around \SI{23}{\minute}, the gel forms and simultaneously becomes thinner and more concentrated --the fluorescence signal which is proportional to the casein concentration is brighter compared to the initial situation. This effect is the fingerprint of syn\ae{}resis: as gelation proceeds, solvent is expelled through both the upper and lower sides of the gel film.
+3D confocal microscopy, as shown in Figure~\ref{fig:dynamics}c and Supplementary Video~\ref{vid:reconstructed}, reveals that those patterns actually correspond to wrinkles of the biogel film. Figure~\ref{fig:sideview}a shows successive side views of the same confocal measurements as in  Figure~\ref{fig:dynamics}c, see also Supplementary Videos~\ref{vid:cutDarcy} and \ref{vid:cutPoiseuille}. Initially the dispersion is homogeneous and fills the entire slit. The black margins in Figure~\ref{fig:sideview}a correspond to the glass walls. Around \SI{23}{\minute}, the gel forms and simultaneously becomes thinner and more concentrated --the fluorescence signal which is proportional to the casein concentration is brighter compared to the initial situation. This effect is the fingerprint of syneresis: as gelation proceeds, solvent is expelled through both the upper and lower sides of the gel film.
 
 Extracting the top and bottom surface of the gel phase allows for quantitative measurements of the relative volume, Figure~\ref{fig:sideview}b, and excess surface area of the gel film, Figure~\ref{fig:sideview}c, see Supplementary Materials. The evolution of the gel volume is surprisingly non-monotonous. After reaching a minimum around 35\% of its initial value at \SI{23}{\minute}, the volume increases. Shortly after, at \SI{36}{\minute}, the planar film destabilises and starts to wrinkle in the $z$-direction creating excess area. This confirms that the instability leading to the primary pattern is due to swelling. Around \SI{38}{\minute}, the amplitude of the wrinkles reaches the thickness of the slit. As swelling continues, the gel flattens on both top and bottom walls (\SI{44}{\minute}) and finally buckles back (\SI{53}{\minute}) to form the secondary pattern (\SI{1}{\hour}21). When the excess area saturates, the dynamics stop (\SI{3}{\hour}). We note that at any given point in time the thickness $h$ of the film of gel is spatially homogeneous.
 
-The primary, secondary and tertiary patterns follow the same path: the birth of an instability of wavelength $\lambda$ of growing amplitude $A(t)$ until saturation to $A_\text{max}$, see Figure~\ref{fig:sideview}a. Throughout the whole process, $\lambda$ remains constant. This path is dynamic in essence. In Figure~\ref{fig:sideview}d, we thus report the velocity $v(t)$ of the wrinkles as it develops in the $z$-direction, see Supplementary Materials for the definition. We observe that the velocity peaks at different times corresponding to syn\ae{}resis and to the respective growths of the primary, secondary and tertiary patterns. We associate each growth with a characteristic time $\tau = A_\text{max}/v_\text{max}$. For example, in the present case the $\tau$ corresponding to the primary pattern is $\SI{123}{\second}$.
+The primary, secondary and tertiary patterns follow the same path: the birth of an instability of wavelength $\lambda$ of growing amplitude $A(t)$ until saturation to $A_\text{max}$, see Figure~\ref{fig:sideview}a. Throughout the whole process, $\lambda$ remains constant. This path is dynamic in essence. In Figure~\ref{fig:sideview}d, we thus report the velocity $v(t)$ of the wrinkles as it develops in the $z$-direction, see Supplementary Materials for the definition. We observe that the velocity peaks at different times corresponding to syneresis and to the respective growths of the primary, secondary and tertiary patterns. We associate each growth with a characteristic time $\tau = A_\text{max}/v_\text{max}$. For example, in the present case the $\tau$ corresponding to the primary pattern is $\SI{123}{\second}$.
 
 Therefore contrary to observations in, e.g., Ref~\cite{Yoo2003}, we do not report any coarsening of the patterns. We believe that the wrinkling pattern is stable against coarsening because of the bending rigidity of the gel~\cite{LeGoff2014}. Indeed when the amplitude saturates the gel flattens against the walls which creates sharp edges. To accommodate those sharp edges with finite bending rigidity, the flat part of the gel actually ripples, see Supplementary Figure~\ref{fig:ripples}. The ripples created by opposite sides of a same flat patch interfere, creating barriers against coarsening~\cite{LeGoff2014}.
 
 
 \begin{figure}
 	\includegraphics{sideview}
-	\caption{3D analysis of the wrinkling process. (a) Confocal $(x,z)$ cuts showing syn\ae{}resis, swelling, wrinkling and cascade buckling. The scale bar is \SI{100}{\micro\metre} (real size ratio). (b-d) Confocal microscopy measurement of the evolution of the volume of the gel phase relative to cell volume, of the excess area and of the velocity along the $z$-direction. Crosses correspond to times in (a).}
+	\caption{3D analysis of the wrinkling process. (a) Confocal $(x,z)$ cuts showing syneresis, swelling, wrinkling and cascade buckling. The scale bar is \SI{100}{\micro\metre} (real size ratio). (b-d) Confocal microscopy measurement of the evolution of the volume of the gel phase relative to cell volume, of the excess area and of the velocity along the $z$-direction. Crosses correspond to times in (a).}
 	\label{fig:sideview}
 \end{figure}
 
 Based on those observations, we examine possible scenarios upon shrinking and swelling of the gel. As the gel forms it expels the solvent and detaches from top and bottom wall, see Figure~\ref{fig:dilation}b and c. For the swelling back we consider three options: 
 
 \noindent
-(i) In Figure~\ref{fig:dilation}d, the swelling back is reversible, only releasing tensile stresses accumulated during shrinking, and the layer remains flat, as expected for chemical gels~\cite{Kim2010}. Since this case is not observed it means that in this physical gel, syn\ae{}resis and swelling processes foster irreversible stress dissipation and structural changes. In the following, we will therefore consider that the shrunk state is stress-free. 
+(i) In Figure~\ref{fig:dilation}d, the swelling back is reversible, only releasing tensile stresses accumulated during shrinking, and the layer remains flat, as expected for chemical gels~\cite{Kim2010}. Since this case is not observed it means that in this physical gel, syneresis and swelling processes foster irreversible stress dissipation and structural changes. In the following, we will therefore consider that the shrunk state is stress-free. 
 
 \noindent
-(ii) In Figure~\ref{fig:dilation}e, we assume that nothing hinders the buckling of the gel film. This simple buckling situation leads to a primary pattern composed of a single bump of size $L$. As the bump amplitude grows larger saturates on the top and bottom wall, buckling of smaller wavelength may appear, as observed by~\cite{Roman1999}. This is also not what we observe since our primary wavelength $\lambda$ is much smaller that $L$.
+(ii) In Figure~\ref{fig:dilation}e, we assume that nothing hinders the buckling of the gel film. This simple buckling situation leads to a primary pattern composed of a single bump of size $L$. As the bump amplitude grows larger \textcolor{blue}{and} saturates on the top and bottom wall, buckling of smaller wavelength may appear, as observed by~\cite{Roman1999}. This is also not what we observe since our primary wavelength $\lambda$ is much smaller that $L$.
 
 \noindent
 (iii) We are left with the case of Figure~\ref{fig:dilation}f where a wrinkling pattern emerges spontaneously with a wavelength $\lambda\ll L$ selected before saturation on the top and bottom walls. To obtain such an instability, one must balance the bending rigidity of the gel film with a transverse load $\sigma_{\perp}$ that hinders buckling on large wavelengths. The transverse load could be due to gravity~\cite{Smoluchowski1910, Kolinski2009, Vella2009, Pineirua2013, Lucantonio2013}, however we confirmed that gravity plays no significant role by successfully repeating the wrinkling pattern in a cell held vertically, i.e. with the weight acting longitudinally rather than transversely. Furthermore, the transverse load cannot be adhesion~\cite{Vella2009a} since the film is not adhering to the top and bottom walls. 
@@ -109,7 +109,7 @@ The binding of a longitudinal edge to a rigid substrate can induce wrinkles upon
 %
 Finally as the four side boundaries remain fixed $\sigma_{\perp}$ cannot come from the resistance to uniaxial stretching~\cite{Cerda2003}.
 
-Therefore at this stage, our observations still raise two unresolved issues which we address in the next sections: (i) what triggers the the spontaneous syn\ae{}resis and swelling back processes? And (ii) what is the nature of $\sigma_{\perp}$ responsible for the selection of the primary wavelength?
+Therefore at this stage, our observations still raise two unresolved issues which we address in the next sections: (i) what triggers the the spontaneous syneresis and swelling back processes? And (ii) what is the nature of $\sigma_{\perp}$ responsible for the selection of the primary wavelength?
 
 \begin{figure*}
 \includegraphics{dilation.pdf}
@@ -117,16 +117,16 @@ Therefore at this stage, our observations still raise two unresolved issues whic
 \label{fig:dilation}
 \end{figure*}
 
-\subsection*{Syn\ae{}resis and swelling back mechanism}
+\subsection*{Syneresis and swelling back mechanism}
 
 \begin{figure}
 	\includegraphics{acidification}%
-	\caption{Acid-induced protein gel properties behave non monotonically with pH. (a) pH decrease over time in a 4\%w sodium caseinate solution acidified by 4\%w GDL in water. The horizontal line indicates isoelectric pH of caseins. (b) Corresponding evolution of the fraction of free caseins. Symbols are direct measures upon addition of GDL. The continuous line is deduced from $x_\text{free}$ at the same pH obtained by addition of HCl 1 molar and waiting for equilibration (inset). (c) Evolution of the elastic modulus $G'$ measured in a rheometer with full adhesion to the cone-plane geometry. (d) Evolution of pore size measured by confocal microscopy in a slit geometry with either adhesion to all walls (black line) or no adhesion to top wall, i.e. allowed syn\ae{}resis and swelling (orange dashed line).}%
+	\caption{Acid-induced protein gel properties behave non monotonically with pH. (a) pH decrease over time in a 4\%w sodium caseinate solution acidified by 4\%w GDL in water. The horizontal line indicates isoelectric pH of caseins. (b) Corresponding evolution of the fraction of free caseins. Symbols are direct measures upon addition of GDL. The continuous line is deduced from $x_\text{free}$ at the same pH obtained by addition of HCl 1 molar and waiting for equilibration (inset). (c) Evolution of the elastic modulus $G'$ measured in a rheometer with full adhesion to the cone-plane geometry. (d) Evolution of pore size measured by confocal microscopy in a slit geometry with either adhesion to all walls (black line) or no adhesion to top wall, i.e. allowed syneresis and swelling (orange dashed line).}%
 	\label{fig:acidification}
 \end{figure}
 
 
-The syn\ae{}resis and swelling back mechanism depends on (i)~the pH sensitivity of caseins, (ii)~the route to gelation, (iii)~the gel properties and (iv)~the boundary conditions.
+The syneresis and swelling back mechanism depends on (i)~the pH sensitivity of caseins, (ii)~the route to gelation, (iii)~the gel properties and (iv)~the boundary conditions.
 
 The stability of casein dispersions strongly depends on the pH. Supplementary Video~\ref{vid:titration} shows the titration of a casein dispersion at 4\%w by 1 molar HCl. At pH=7, the caseins are well dispersed then they flocculate between pH=5.5 to 4 and finally at pH=3 the solution becomes clearer as caseins partially redisperse. The state diagram of caseins as a function of pH is thus related to charge stabilisation. At neutral pH caseins are charged negatively and repel each other. As the pH decreases to the isoelectric point of the caseins (pH$\approx 4.6$), casein molecules lose their negative net charge and tend to stick to each other~\cite{Roefs1986,Bremer1989,Lucey1998,Dickinson2002}. Beyond the isoelectric point caseins acquire a positive net charge and therefore partially re-dissolve. In the inset of Figure~\ref{fig:acidification}b, we quantify this effect and measure with UV absorption spectroscopy the amount of free caseins within the 4\%w dispersion as a function of pH, see Supplementary Materials. Starting at pH=6.8 all the casein molecules are well dispersed and the free casein fraction $x_\text{free}$ is 1. Upon decreasing the pH to the isolectric point the free casein fraction drops to almost 0: almost all the casein molecules are aggregated. Further decrease of the pH of the solution leads to a partial redissolution of the casein aggregates. At pH=2 the fraction of free casein is 0.35.
 
@@ -138,10 +138,10 @@ We monitor the GDL-induced gelation with a rheometer in cone-plate geometry. As 
 
 To gain further insight into the mechanical properties of the gel we turn to microstructural observations under confocal microscopy. As shown in Supplementary Videos~\ref{vid:stick63} and \ref{vid:nostick63} and in Supplementary Figure~\ref{fig:nonmonotonic} the gel consists in a space-spanning fractal network with a cut-off length scale $\xi$ that corresponds to the maximum pore size~\cite{VanDijk1986}. Permeability $\alpha$ is of the order of \SI{67000}{\square\nano\metre}, see Supplementary Figure~\ref{fig:permeability}. The fractal model fits the structure at all times but its parameters vary non monotonously during GDL acidification. As shown in Figure~\ref{fig:acidification}d and Supplementary Figure~\ref{fig:nonmonotonic}, when reaching the isolectric point $\xi$ increases up to a maximum length of \SI{7}{\micro\metre} due to the solvent expulsion out of the casein network~\cite{Lucey1998} like in viscoelastic phase separation~\cite{Tanaka2000h}. This corresponds to a tighter packing of the caseins within the network strands. Such stiffening of the strands explains the observed increase of elasticity. Beyond the isoelectric point caseins partially regain solubility, the packing within the strands loosens which results in weaker, thicker strands and smaller pores as $\xi$ decreases down to \SI{4}{\micro\metre}, hence the long-term decrease of the elastic modulus.
 
-Boundary conditions is the final parameter that is essential to form wrinkled patterns. In order to turn off the adsorption of the caseins on a surface, we coat the surface with polymer brushes, see Materials and Methods, effectively creating non adhesive boundary conditions for the gel. When the casein adhesion to the upper boundary is turned off, the gel still not wrinkles because it remains attached to the bottom wall, but it detaches from the top wall. In this situation we can monitor $\xi$, Figure~\ref{fig:acidification}d. $\xi$ remains mostly constant and variations manifests themselves at the macroscopic level, on the volume occupied by the gel.
+Boundary conditions is the final parameter that is essential to form wrinkled patterns. In order to turn off the adsorption of the caseins on a surface, we coat the surface with polymer brushes, see Materials and Methods, effectively creating non adhesive boundary conditions for the gel. \textcolor{blue}{When the casein adhesion to the upper boundary is turned off, the gel detaches from the top wall. However the gel does not wrinkle because it remains attached to the bottom wall.} In this situation we can monitor $\xi$, Figure~\ref{fig:acidification}d. $\xi$ remains mostly constant and variations manifests themselves at the macroscopic level, on the volume occupied by the gel.
 
 
-Therefore, the syn\ae{}resis and swelling back mechanism is related to charge stabilisation of the casein proteins as function of the pH. Such a mechanism is only effective to produce wrinkles when adhesion of the caseins to both top and bottom walls is turned off. Consistently with our explanation, the amount of GDL, and thus the final pH reached by the suspension, controls the amount of swelling back. Thus at low GDL concentrations we only observe the primary pattern, at high GDL concentrations we observe the formation of higher order patterns.
+Therefore, the syneresis and swelling back mechanism is related to charge stabilisation of the casein proteins as function of the pH. \textcolor{blue}{In particular, beyond the isoelectric point, the casein are charged and repel each other, leading to a swelling at every scale: proteins are further from each other, the strands become larger and longer and the gel sheet swells.} Such a mechanism is only effective to produce wrinkles when adhesion of the caseins to both top and bottom walls is turned off. Consistently with our explanation, the amount of GDL, and thus the final pH reached by the suspension, controls the amount of swelling back. Thus at low GDL concentrations we only observe the primary pattern, at high GDL concentrations we observe the formation of higher order patterns.
 
 
 
@@ -157,7 +157,7 @@ Therefore, the syn\ae{}resis and swelling back mechanism is related to charge st
 
 %Longitudinally constrained swelling of the gel film is the origin and driving force of the buckling instability. The gel area becomes in excess compared to the available area, thus the gel must fold. However, this does not explains how a wavelength is selected.
 
-The determination of the characteristic length $\lambda$ of a wrinkling pattern is an old problem. Large deformations of thin sheets are governed by F\"{o}ppl-von K\'arm\'an equations~\cite{landau1986}, which are essentially impossible to solve in analytical form. However using scaling and asymptotic arguments one can obtain the dominant wavelength of the wrinkling pattern up to dimensionless prefactors and isolate the physically meaningful ingredients~\cite{Cerda2003}. An elastic film buckles due to excess area with respect to its boundaries. Wrinkling is a buckling hindered by a substrate: the mismatch of elastic properties between the film and the substrate selects the preferred wrinkling wavelength~\cite{Gough1940, Bijlaard1946}. $\lambda$ is then set by the competition between the flexural modulus of the film $B=E/(1-\nu^2)$ ($E$ Young modulus, $\nu$ Poisson ratio) and a transverse load $\sigma_\perp$. For small deflections of  amplitude $A$, $\lambda$ scales as~\cite{Vella2009,Kolinski2009}: 
+The determination of the characteristic length $\lambda$ of a wrinkling pattern is an old problem. Large deformations of thin sheets are governed by F\"{o}ppl-von K\'arm\'an equations~\cite{landau1986}, which are essentially impossible to solve in analytical form. However using scaling and asymptotic arguments one can obtain the dominant wavelength of the wrinkling pattern up to dimensionless prefactors and isolate the physically meaningful ingredients~\cite{Cerda2003,Davidovitch2011}. An elastic film buckles due to excess area with respect to its boundaries. Wrinkling is a buckling hindered by a substrate: the mismatch of elastic properties between the film and the substrate selects the preferred wrinkling wavelength~\cite{Gough1940, Bijlaard1946}. $\lambda$ is then set by the competition between the flexural modulus of the film $B=E/(1-\nu^2)$ ($E$ Young modulus, $\nu$ Poisson ratio) and a transverse load $\sigma_\perp$. For small deflections of  amplitude $A$, $\lambda$ scales as~\cite{Vella2009,Kolinski2009}: 
 %
 \begin{equation}
 \lambda \sim \left( A h^3 \frac{B}{\sigma_{\perp}} \right)^{1/4}.
@@ -167,7 +167,7 @@ The determination of the characteristic length $\lambda$ of a wrinkling pattern 
 
 %L. Landau and E.M. Lifshitz, Theory of Elasticity (Pergamon, New York, 1986), 3rd ed.
 
-This framework has been successfully applied to situations where $\sigma_{\perp}$ comes from the resistance of an elastic substrate ~\cite{Gough1940, Bijlaard1946}. Dealing only with (semi)infinite substrates, Biot generalised the elasticity of both the film and the substrate to viscoelasticity~\cite{Biot1957} or poroelasticity~\cite{Biot1964}, leading to time-dependent kinetic wavelength selection. Furthermore, it was shown that equation~(\ref{eq:lstar}) remains valid even when $\sigma_{\perp}$ comes from the resistance to uniaxial stretching~\cite{Cerda2003}, from gravity~\cite{Smoluchowski1910, Kolinski2009, Vella2009, Pineirua2013, Lucantonio2013}, from boundaries~\cite{Vandeparre2011a, Li2013} or from adhesion~\cite{Vella2009a}. However, we have excluded these various origins for $\sigma_{\perp}$ in the discussion around Figure~\ref{fig:dilation}.
+This framework has been successfully applied to situations where $\sigma_{\perp}$ comes from the resistance of an elastic substrate ~\cite{Gough1940, Bijlaard1946}. Dealing only with (semi)infinite substrates, Biot generalised the elasticity of both the film and the substrate to viscoelasticity~\cite{Biot1957} or poroelasticity~\cite{Biot1964}, leading to time-dependent kinetic wavelength selection. Furthermore, it was shown that equation~(\ref{eq:lstar}) remains valid even when $\sigma_{\perp}$ comes from the resistance to uniaxial stretching~\cite{Cerda2003}, from gravity~\cite{Smoluchowski1910, Kolinski2009, Vella2009, Pineirua2013, Lucantonio2013}, from capillary forces~\cite{Huang2007}, from boundaries~\cite{Vandeparre2011a, Li2013} or from adhesion~\cite{Vella2009a}. However, we have excluded these various origins for $\sigma_{\perp}$ in the discussion around Figure~\ref{fig:dilation}.
 %
 The only possible explanation left for $\sigma_{\perp}$ involve hydrodynamic stresses due to viscous flow of the solvent, either through the gel porous matrix itself or in the surrounding solvent layers.
 
@@ -204,7 +204,7 @@ To sum up, we expect two regimes of viscosity-dominated wrinkling: for $H\ll H^*
 
 \subsection*{Experimental tests}
 
-For a typical gel film, the buoyancy after syn\ae{}resis is estimated from the initial sodium caseinate mass concentration $C_\text{cas}$ as $\Delta\rho=C_\text{cas} e/h = \SI{130}{\kilo\gram\per\cubic\metre}$ leading to a gravity stress $\sigma_\perp^G \approx \SI{0.04}{\pascal}$. This is much lower than typical Darcy or Poiseuille stresses $\sigma_\perp^D \approx \sigma_\perp^P \approx \SI{0.15}{\pascal}$ which confirms that gravity can be neglected as already inferred from test experiments where the cell is held vertically rather than horizontally.
+For a typical gel film, the buoyancy after syneresis is estimated from the initial sodium caseinate mass concentration $C_\text{cas}$ as $\Delta\rho=C_\text{cas} e/h = \SI{130}{\kilo\gram\per\cubic\metre}$ leading to a gravity stress $\sigma_\perp^G \approx \SI{0.04}{\pascal}$. This is much lower than typical Darcy or Poiseuille stresses $\sigma_\perp^D \approx \sigma_\perp^P \approx \SI{0.15}{\pascal}$ which confirms that gravity can be neglected as already inferred from test experiments where the cell is held vertically rather than horizontally.
 
 
 Darcy and Poiseuille models yield wavelengths that are of the same order in most of the cases under study. Thus only systematic measurements of the experimental $\lambda$ together with estimates for all the parameters involved in either model shall allow one to discriminate between them, see Supplementary Materials about such measurements. As summarised in Supplementary Table~\ref{tab:data} we systematically vary (i) the thickness of the cell, impacting $h$ and the maximal amplitude, (ii) the gel composition and thus both its stiffness and its permeability, (iii) the viscosity of the solvent by adding glycerol, which also impacts the gel stiffness, permeability and $\tau$. Finally, the only parameter that we have no control upon is the initial altitude $H$ of the gel before wrinkling that varies randomly. 
@@ -216,6 +216,8 @@ The beauty of this approach is that it is not only valid to model the primary wa
 
 
 Despite changing the gel properties and the cell geometry we always observe wrinkling proving the robustness of this approach to form wrinkling patterns. We are in the position to vary $H/H^\star$ from 0.1 to 10 so that we can test the crossover between Darcy and Poiseuille mechanism. In Figure~\ref{fig:DarcyPoiseuille}a and \ref{fig:DarcyPoiseuille}b we have plotted the measured wavelength as a function of the model prediction $\lambda_D$ and $\lambda_P$ respectively. If the predictions are correct we expect $\lambda_\text{exp}=\lambda_D$ when $H<H^*$ and $\lambda_\text{exp}=\lambda_P$ when $H>H^*$. Indeed, both model seems to apply in their domain of validity. The failure of the Poiseuille model is only visible at small wavelengths where an unexplained offset (dashed line in Figure~\ref{fig:DarcyPoiseuille}b) is necessary to fit the data correctly. To go further, we derive a complete model summing up the influence of both Poiseuille and Darcy dissipation, see Supplementary Materials. The results of this mixed model are displayed in Figure~\ref{fig:DarcyPoiseuille}c and agree with $\lambda_\text{exp}$ over the whole $H/H^*$ range.
+
+\textcolor{blue}{Despite a very good agreement of the scaling, the exact prefactors of all models disagree by a factor 0.63-0.69. We suggest that this discrepancy comes from the fact that our model is 2D, i.e. uniaxial compression and deflection, whereas our system is 3D, i.e. biaxial compression and deflection. Since our system is isotropic in the plane, this does not change the scaling but might account for a dimensional factor.}
 
 \section*{Conclusion}
 
@@ -336,9 +338,9 @@ I(q) = \frac{2\chi\Gamma(d)}{\left(1+\left((d+1)\xi q\right)^2\right)^{d/2}}
 where the susceptibility $\chi$ is related to the fluorescence contrast between the network and the solvent, the cut-off length $\xi$ corresponds to the largest pore size and $d$ is the fractal dimension. $\Gamma$ is the Gamma function. Equation~(\ref{eq:fractalS}) is a good approximation to the 2D Fourier transform of a fractal pair correlation function $g(r) \sim 1+ e^{-r/\xi} r^{d-2}$.
 %En 3D on peut citer \cite{Martin1987,Chen1986}
 
-Figure~\ref{fig:acidification}d of the main text and Supplementary Figure~\ref{fig:nonmonotonic}c-e show the evolution of the fitting parameters in two different sets of boundary conditions: (i) complete adhesion of the gel on all walls, preventing syn\ae{}resis and swelling; (ii) complete adhesion except on the top wall, allowing syn\ae{}resis and swelling. The latter situation is a proxy to the situation where we observe wrinkling, since it is necessary to keep the gel into the thin focal plane of the 63x objective lens of the confocal microscope. To do so, we coat only the microscope slide with acrylamide brush. The cover slip is cleaned but not coated, thus keeping strong adhesion on the side closer to the objective lens. Neither buckling nor wrinkling is detected in such a configuration.
+Figure~\ref{fig:acidification}d of the main text and Supplementary Figure~\ref{fig:nonmonotonic}c-e show the evolution of the fitting parameters in two different sets of boundary conditions: (i) complete adhesion of the gel on all walls, preventing syneresis and swelling; (ii) complete adhesion except on the top wall, allowing syneresis and swelling. The latter situation is a proxy to the situation where we observe wrinkling, since it is necessary to keep the gel into the thin focal plane of the 63x objective lens of the confocal microscope. To do so, we coat only the microscope slide with acrylamide brush. The cover slip is cleaned but not coated, thus keeping strong adhesion on the side closer to the objective lens. Neither buckling nor wrinkling is detected in such a configuration.
 
-In situation (i), the gel keeps its topology throughout the gelation and over-acidification. Left of Supplementary Figure~\ref{fig:nonmonotonic}a shows that the arms of the gel first shrink laterally while keeping their length, and then swell again. Syn\ae{}resis and swelling are thus local processes. By contrast in situation (ii), the gel as a whole compresses while forming. Since our focal plane is at a fixed depth, we cannot follow the topology of the same subset of the network, however the pore size is clearly smaller than in situation (ii). The isoelectric gel, at minimum gel volume, is probably isotropic or only marginally anisotropic in $z$. This explains that subsequent swelling is not occurring only along $z$ but also in plane, causing buckling.
+In situation (i), the gel keeps its topology throughout the gelation and over-acidification. Left of Supplementary Figure~\ref{fig:nonmonotonic}a shows that the arms of the gel first shrink laterally while keeping their length, and then swell again. Syneresis and swelling are thus local processes. By contrast in situation (ii), the gel as a whole compresses while forming. Since our focal plane is at a fixed depth, we cannot follow the topology of the same subset of the network, however the pore size is clearly smaller than in situation (ii). The isoelectric gel, at minimum gel volume, is probably isotropic or only marginally anisotropic in $z$. This explains that subsequent swelling is not occurring only along $z$ but also in plane, causing buckling.
 
 $\xi$ is also systematically measured in the same way at the end of each wrinkling experiment and reported in Supplementary Table~\ref{tab:data}. %Final fractal dimension was always close to 2 within error bars. Comparing $\chi$ across different setting of the microscope is not relevant.
 
