--- a/fig_plis/Yaourt.bib
+++ b/fig_plis/Yaourt.bib
@@ -585,7 +585,7 @@
 
 @Article{Davidovitch2011,
   Title                    = {{Prototypical model for tensional wrinkling in thin sheets.}},
-  Author                   = {Davidovitch, Benny and Schroll, Robert D and Vella, Dominic and Adda-Bedia, Mokhtar and Cerda, Enrique a},
+  Author                   = {Davidovitch, Benny and Schroll, Robert D and Vella, Dominic and Adda-Bedia, Mokhtar and Cerda, Enrique A},
   Journal                  = {Proc. Natl. Acad. Sci. U. S. A.},
   Year                     = {2011},
 
@@ -924,6 +924,27 @@
   File                     = {:home/mathieu/Documents/Mendeley Desktop/1998/Nature/Hu et al. - 1998 - Polymer gels with engineered environmentally responsive surface patterns.pdf:pdf},
   Owner                    = {mathieu},
   Timestamp                = {2015.01.09}
+}
+
+@Article{Huang2007,
+  Title                    = {{Capillary wrinkling of floating thin polymer films.}},
+  Author                   = {Huang, Jiangshui and Juszkiewicz, Megan and de Jeu, Wim H and Cerda, Enrique and Emrick, Todd and Menon, Narayanan and Russell, Thomas P},
+  Journal                  = {Science},
+  Year                     = {2007},
+
+  Month                    = aug,
+  Number                   = {5838},
+  Pages                    = {650--3},
+  Volume                   = {317},
+
+  Abstract                 = {A freely floating polymer film, tens of nanometers in thickness, wrinkles under the capillary force exerted by a drop of water placed on its surface. The wrinkling pattern is characterized by the number and length of the wrinkles. The dependence of the number of wrinkles on the elastic properties of the film and on the capillary force exerted by the drop confirms recent theoretical predictions on the selection of a pattern with a well-defined length scale in the wrinkling instability. We combined scaling relations that were developed for the length of the wrinkles with those for the number of wrinkles to construct a metrology for measuring the elasticity and thickness of ultrathin films that relies on no more than a dish of fluid and a low-magnification microscope. We validated this method on polymer films modified by plasticizer. The relaxation of the wrinkles affords a simple method to study the viscoelastic response of ultrathin films.},
+  Doi                      = {10.1126/science.1144616},
+  File                     = {:home/mathieu/Documents/Mendeley Desktop/2007/Science (New York, N.Y.)/Huang et al. - 2007 - Capillary wrinkling of floating thin polymer films.pdf:pdf},
+  ISSN                     = {1095-9203},
+  Owner                    = {mathieu},
+  Pmid                     = {17673658},
+  Timestamp                = {2015.07.20},
+  Url                      = {http://www.ncbi.nlm.nih.gov/pubmed/17673658}
 }
 
 @Article{Huang2005,
